<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <!--Action Bar-->
    <include
        layout="@layout/custom_actionbar_input_pengaduan"
        />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >


        <!--Content-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="16dp"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/font_small_medium"
                    android:text="* Form Wajib Disi"/>


                <Spinner
                    android:id="@+id/etjenis"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_vertical"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:layout_marginBottom="8dp"
                    android:inputType="text">

                </Spinner>

                <EditText
                    android:id="@+id/etnamaproduk"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/et_2"
                    android:padding="10dp"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_vertical"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    android:drawableRight="@drawable/bintang" />


                <EditText
                    android:id="@+id/etreg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/et_3"
                    android:padding="10dp"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_vertical"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    />

                <EditText
                    android:id="@+id/etkadaluarsa"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/et_4"
                    android:padding="10dp"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_vertical"
                    android:drawableRight="@drawable/ic_drop_down"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    />

                <EditText
                    android:id="@+id/etnamapabrik"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/et_5"
                    android:padding="10dp"
                    android:drawableRight="@drawable/bintang"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_vertical"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    />

                <EditText
                    android:id="@+id/etalamatpabrik"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/et_6"
                    android:padding="10dp"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_vertical"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    />

                <EditText
                    android:id="@+id/etnomorbatch"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/et_7"
                    android:padding="10dp"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_vertical"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    />

                <!--<EditText-->
                    <!--android:id="@+id/etalamatbeli"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:hint="@string/et_9"-->
                    <!--android:padding="10dp"-->
                    <!--android:textSize="@dimen/font_medium"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:background="@drawable/style_bitellipse_strokeblack"-->
                    <!--android:layout_marginBottom="8dp"-->
                    <!--android:inputType="text"-->
                    <!--/>-->


                <EditText
                    android:id="@+id/ettglguna"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/et_10"
                    android:padding="10dp"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_vertical"
                    android:drawableRight="@drawable/ic_drop_down"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    />

                <EditText
                    android:id="@+id/etlokasi"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/et_8"
                    android:drawableRight="@drawable/bintang"
                    android:padding="10dp"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_vertical"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    android:focusable="false"
                    android:clickable="true"
                    />
                <EditText
                    android:id="@+id/etlat"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/lat"
                    android:drawableRight="@drawable/bintang"
                    android:padding="10dp"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_vertical"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    />
                <EditText
                    android:id="@+id/etlng"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/lng"
                    android:padding="10dp"
                    android:drawableRight="@drawable/bintang"
                    android:textSize="@dimen/font_medium"
                    android:gravity="center_vertical"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Info Tambahan"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/colorBlack"/>

                <EditText
                    android:id="@+id/etinfotambahan"
                    android:textSize="@dimen/font_small_medium"
                    android:padding="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:lines="4"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:scrollHorizontally="false"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Isi Pengaduan / Pertanyaan"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/colorBlack"/>

                <EditText
                    android:id="@+id/etisi"
                    android:textSize="@dimen/font_small_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="top|left"
                    android:background="@drawable/style_bitellipse_strokeblack"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:lines="4"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:scrollHorizontally="false"
                    android:layout_marginBottom="8dp"
                    />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="14dp"
                    android:layout_marginBottom="15dp"
                    app:cardElevation="3dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    >

                    <!--List PDF-->
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvFoto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        >

                    </android.support.v7.widget.RecyclerView>

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.4"
                        android:text="@string/judul_form"
                        android:textSize="@dimen/font_medium"
                        android:textStyle="bold"
                        android:layout_marginRight="8dp"
                        />

                    <Button
                        android:id="@+id/btnAlbum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.8"
                        android:drawableLeft="@drawable/ic_album"
                        android:paddingLeft="6dp"
                        android:text="@string/album_form"
                        android:textSize="@dimen/font_small"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/style_form_edittext"
                        android:layout_marginRight="8dp"
                        />

                    <Button
                        android:id="@+id/btnFoto"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.8"
                        android:drawableLeft="@drawable/ic_scan"
                        android:paddingLeft="10dp"
                        android:text="@string/button_gambar"
                        android:textSize="@dimen/font_small"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/style_input_button"
                        />



                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:weightSum="2"
                    android:layout_marginTop="20dp"
                    >

                    <Button
                        android:id="@+id/btnreset"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/btn_reset"
                        android:textSize="@dimen/font_medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:background="@drawable/style_form_edittext"
                        android:layout_marginRight="4dp"
                        />

                    <Button
                        android:id="@+id/btntambah"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Kirim"
                        android:textSize="@dimen/font_medium"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/style_input_button"
                        android:layout_marginLeft="4dp"
                        />



                </LinearLayout>




            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>