<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorWhite"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="106dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:textColor="@color/colorFont"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="Layanan Pengaduan Masyarakat"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFont"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="Balai Besar POM Kota Pontianak"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="@dimen/font_medium"
                android:hint="@string/login_user"
                android:id="@+id/etemail"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlackHint"
                android:background="@drawable/style_login_edittext"
                android:drawableLeft="@drawable/user"
                android:drawableStart="@drawable/user"
                android:paddingLeft="17dp"
                android:drawablePadding="8dp"
                android:layout_marginTop="33dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/etpass"
                android:textSize="@dimen/font_medium"
                android:hint="@string/login_password"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlackHint"
                android:background="@drawable/style_login_edittext"
                android:drawableLeft="@drawable/lock"
                android:drawableStart="@drawable/lock"
                android:paddingLeft="17dp"
                android:drawablePadding="8dp"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:inputType="textPassword"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/btnLogin"
                android:text="@string/login_button"
                android:textSize="@dimen/font_medium"
                android:textColor="@color/colorWhite"
                android:background="@drawable/style_login_button"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="30dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/colorDarkBlack"
                    android:layout_marginRight="5dp"
                    android:text="Belum punya akun?"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/daftar"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/colorBlue"
                    android:text="Daftar"/>
            </LinearLayout>


        </LinearLayout>



    </LinearLayout>

</ScrollView>