<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorWhite"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_marginTop="5dp"
            android:layout_width="125dp"
            android:layout_height="106dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8px"
            android:textColor="@color/colorFont"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="Layanan Pengaduan Masyarakat"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorFont"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="Balai Besar POM Kota Pontianak"/>

        <!--<RelativeLayout-->
            <!--android:layout_width="120dp"-->
            <!--android:layout_height="120dp"-->
            <!--android:layout_margin="4dp">-->

            <!--<ImageView-->
                <!--android:id="@+id/ivfoto"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:scaleType="centerCrop"-->
                <!--/>-->

            <!--<TextView-->
                <!--android:id="@+id/uploadfoto"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="FOTO"-->
                <!--android:textStyle="bold"-->
                <!--android:textColor="#fff"-->
                <!--android:shadowColor="#000"-->
                <!--android:shadowRadius="2"-->
                <!--android:shadowDx="1"-->
                <!--android:shadowDy="1"-->
                <!--android:padding="5dp"-->
                <!--android:gravity="center"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:background="@color/colorBlackOpacity"-->
                <!--/>-->
        <!--</RelativeLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="4dp"
                android:textSize="@dimen/font_medium"
                android:textColor="@color/colorDarkBlack"
                android:layout_marginRight="45dp"
                android:text="Nama :"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/font_small_medium"
                android:hint="@string/register_nama"
                android:id="@+id/etnama"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlackHint"
                android:background="@drawable/style_register_edittext"
                android:paddingLeft="17dp"
                android:drawablePadding="8dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="4dp"
                android:textSize="@dimen/font_medium"
                android:textColor="@color/colorDarkBlack"
                android:layout_marginRight="45dp"
                android:text="Username :"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/font_small_medium"
                android:hint="@string/register_username"
                android:id="@+id/etusername"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlackHint"
                android:background="@drawable/style_register_edittext"
                android:paddingLeft="17dp"
                android:drawablePadding="8dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="4dp"
                android:textSize="@dimen/font_medium"
                android:textColor="@color/colorDarkBlack"
                android:layout_marginRight="45dp"
                android:text="Email :"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/font_small_medium"
                android:hint="@string/register_email"
                android:id="@+id/etemailregister"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlackHint"
                android:background="@drawable/style_register_edittext"
                android:paddingLeft="17dp"
                android:drawablePadding="8dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="4dp"
                android:textSize="@dimen/font_medium"
                android:textColor="@color/colorDarkBlack"
                android:layout_marginRight="45dp"
                android:text="Password :"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/font_small_medium"
                android:hint="@string/register_password"
                android:id="@+id/etpassword_register"
                android:textColor="@color/colorBlack"
                android:inputType="textPassword"
                android:textColorHint="@color/colorBlackHint"
                android:background="@drawable/style_register_edittext"
                android:paddingLeft="17dp"
                android:drawablePadding="8dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="45dp"
                android:layout_marginBottom="4dp"
                android:textSize="@dimen/font_medium"
                android:textColor="@color/colorDarkBlack"
                android:layout_marginRight="45dp"
                android:text="Password Confirm :"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="@dimen/font_small_medium"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:id="@+id/etpassword_confirm"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlackHint"
                android:background="@drawable/style_register_edittext"
                android:paddingLeft="17dp"
                android:drawablePadding="8dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/btnRegister"
                android:text="@string/login_register"
                android:textSize="@dimen/font_medium"
                android:textColor="@color/colorWhite"
                android:background="@drawable/style_register_button"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="30dp"
                />


        </LinearLayout>



    </LinearLayout>

</ScrollView>